# self-improving-llm-kb

./: .env.example  .gitignore  README.md  cli.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: default.yaml
data/knowledge_base/: machine_learning_basics.md  model_evaluation.md  neural_networks.md  retrieval_augmented_generation.md  transformers_and_attention.md
docs/: api_reference.md  architecture.md  concepts.md  evaluation.md  index.md  self_improving_loop.md  setup.md  usage.md
scripts/: __init__.py  evaluate.py
src/: __init__.py  pipeline.py
src/evaluation/: __init__.py  metrics.py  tracker.py
src/ingestion/: __init__.py  chunker.py  parser.py
src/llm/: __init__.py  reasoning.py
src/memory/: __init__.py  store.py
src/retrieval/: __init__.py  dense.py  hybrid.py  reranker.py  sparse.py
src/utils/: config.py  logging_setup.py  models.py
tests/: conftest.py  test_config.py  test_evaluation.py  test_ingestion.py  test_memory.py  test_pipeline_integration.py  test_retrieval.py
