[project]
name = "self-improving-llm-kb"
version = "0.1.0"
description = "Production-grade Self-Improving LLM Knowledge Base with hybrid retrieval and persistent memory."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "faiss-cpu>=1.7.4",
    "rank-bm25>=0.2.2",
    "openai>=1.14.0",
    "sentence-transformers>=2.5.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0.1",
    "mlflow>=2.11.0",
    "streamlit>=1.32.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "scikit-learn>=1.4.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff==0.4.4",
]

[project.scripts]
kb = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
# Add project root to sys.path so 'src.*' absolute imports resolve in tests
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pyrefly]
# Tell Pyrefly to resolve imports from the project root, not src/
# This fixes false-positive "Cannot find module src.*" warnings.
project_includes = ["."]

